# zpad

./: README.md
lab1/: README.md
lab2/: README.md  part1_vhi.ipynb  part2_household.ipynb
lab3/: README.md  lab3.ipynb
lab4/: README.md  lab4.py
lab5/: README.md  lab5.py
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab6/include/: KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab7/include/: CameraProvider.hpp  Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab7/src/: Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
